--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>js-core-FE-36</title>
+    <title>Hi my Java Script 55</title>
   </head>
   <body>
-    <h1>HEllo my lovely FE-36</h1>
+    <h1>Hi my Java Script 55</h1>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
